Use ProcessBuilder for executing the runner jar file.